--- a/src/main/webapp/app/tpv/menu.html
+++ b/src/main/webapp/app/tpv/menu.html
@@ -1,8 +1,11 @@
+<div ng-cloak>
 <div class="container">
     <div class="row">
+        <div ui-view="listaproducttos" ui-sref="listaproducttos" class="col-md-3">
 
-        <div ui-view="menutipos" class="col-md-3"></div>
+        </div>
         <div ui-view="listaproductos" class="col-md-6"></div>
         <div ui-view="listatickets" class="col-md-3"></div>
     </div>
+</div>
 </div>
