--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,7 +16,6 @@
     <!-- endbuild -->
     <!-- build:css content/css/main.css -->
     <link rel="stylesheet" href="content/css/main.css">
-    <script src="app/tpv/menu.controller.js"></script>
     <!-- endbuild -->
 </head>
 <body ng-app="bakeryTpvApp" ng-strict-di>
@@ -199,8 +198,8 @@
     <script src="app/account/activate/activate.state.js"></script>
     <script src="app/account/activate/activate.controller.js"></script>
     <script src="app/account/account.state.js"></script>
-    <script src="app/tpv/menu.controller.js"></script>
     <script src="app/tpv/menu.state.js"></script>
+    <script src="app/tables/listaproductos/listaproductos.state.js"></script>
     <!-- endinject -->
     <!-- endbuild -->
 
