--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -3,13 +3,19 @@
     <section id="welcome">
         <div class="container">
             <h2><span>Bakery TPV</span></h2>
-            <hr class="sep">
-            <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu laoreet diam, vitae ultricies enim. Phasellus eros quam, hendrerit id lectus id, posuere iaculis ante. Mauris rhoncus, turpis a suscipit eleifend, felis magna aliquet lorem, et porttitor lorem libero quis neque. Proin purus ante, condimentum dignissim sapien vitae, fermentum semper eros. Nam commodo efficitur erat a faucibus. Aliquam dapibus facilisis neque in dapibus. Aliquam non aliquet quam, sit amet lacinia quam. Nam gravida malesuada scelerisque. Fusce id turpis rhoncus, mattis turpis ut, consequat sapien. Fusce risus turpis, commodo vitae luctus finibus, tincidunt at leo. Aenean dapibus ultricies justo eu varius. Sed rutrum, arcu sit amet dapibus posuere, nisi justo dapibus purus, at lobortis elit odio nec arcu. Vestibulum in lectus vel neque pellentesque finibus. Mauris dictum blandit interdum.
-            </h4>
-        </div>
-    </section>
-    <div class="fondo"></div>
-    <section>
+            <h4>BakeryTPV es una aplicación desarrollada en Android, una herramienta para
 
+                gestionar las ventas de un establecimiento.
+                <br/>
+                En ella se crean tickets con su respectivo número de mesa, este se puede
+
+                modificar en cualquier momento, se le puede añadir ofertas o productos y
+
+                además se puede modificar el precio final del ticket con una calculadora.
+            </h4>
+            <div  class="col-md-4 " style="text-align: center ; align-content: center">
+                <img  src="../../content/images/LoginScreenActivity.png" style="width: 80%; height: 80%"/>​
+            </div>
+        </div>
     </section>
 </div>
