#12 Index finalizado (falta añadir apk)

--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -1,21 +1,47 @@
 <div ng-cloak>
-    <div class="fondo"></div>
-    <section id="welcome">
+    <div class="fondo">
+        <header>
+            <div class="container" id="maincontent" tabindex="-1">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <img class="img-responsive" src="../../content/images/bakerylogolauncher.png" alt="">
+                        <div class="intro-text">
+                            <h1 class="name">BAKERY TPV</h1>
+                            <hr >
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
+    </div>
+    <section id="portfolio">
         <div class="container">
-            <h2><span>Bakery TPV</span></h2>
-            <h4>BakeryTPV es una aplicación desarrollada en Android, una herramienta para
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>¿Qué es Bakery TPV?</h2>
+                    <hr>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12" style="text-align: center">
+                    <p>BakeryTPV es una aplicación desarrollada en Android, una herramienta para
 
-                gestionar las ventas de un establecimiento.
-                <br/>
-                En ella se crean tickets con su respectivo número de mesa, este se puede
+                        gestionar las ventas de un establecimiento.
+                        <br/>
+                        En ella se crean tickets con su respectivo número de mesa, este se puede
 
-                modificar en cualquier momento, se le puede añadir ofertas o productos y
+                        modificar en cualquier momento, se le puede añadir ofertas o productos y
 
-                además se puede modificar el precio final del ticket con una calculadora.
-            </h4>
-            <div  class="col-md-4 " style="text-align: center ; align-content: center">
-                <img  src="../../content/images/LoginScreenActivity.png" style="width: 80%; height: 80%"/>​
+                        además se puede modificar el precio final del ticket con una calculadora.</p>
+                </div>
+
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <a href="../../content/images/bakerylogolauncher.png" class="btn btn-lg btn-outline" download>
+                        <i class="fa fa-download"></i> Descargar APK
+                    </a>
+                </div>
             </div>
         </div>
     </section>
+
 </div>
