--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -27,7 +27,11 @@
 <div ui-view="content">
     <!-- Angular views -->
 </div>
+<footer>
+    <div class="navbar navbar-inverse navbar-fixed-bottom">
 
+    </div>
+</footer>
 
 <!-- Google Analytics: uncomment and change UA-XXXXX-X to be your site's ID.
 <script>
