finalizado para el proyecto

--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -36,7 +36,7 @@
                 </div>
 
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="../../content/images/bakerylogolauncher.png" class="btn btn-lg btn-outline" download>
+                    <a href="../../content/apk/BakeryTPV.apk" class="btn btn-lg btn-outline" download>
                         <i class="fa fa-download"></i> Descargar APK
                     </a>
                 </div>
